@@ -50,7 +50,7 @@ $itemFormList->addRow(
 );
 
 // append hosts to form list
-if ($this->data['singleHost']) {
+if ($this->data['displayInterfaces']) {
 	$interfacesComboBox = new CComboBox('interfaceid', $this->data['interfaceid']);
 	$interfacesComboBox->addItem(new CComboItem(0, '', null, 'no'));
 
@@ -462,12 +462,12 @@ $itemFormList->addRow(
 );
 
 // append applications to form list
-if ($this->data['singleHost']) {
+if ($this->data['displayApplications']) {
 	// replace applications
 	$appToReplace = null;
-	if (isset($_REQUEST['applications'])) {
+	if (hasRequest('applications')) {
 		$getApps = API::Application()->get(array(
-			'applicationids' => $_REQUEST['applications'],
+			'applicationids' => getRequest('applications'),
 			'output' => array('applicationid', 'name')
 		));
 		foreach ($getApps as $getApp) {
@@ -479,29 +479,27 @@ if ($this->data['singleHost']) {
 	}
 
 	$replaceApp = new CMultiSelect(array(
-			'name' => 'applications[]',
-			'objectName' => 'applications',
-			'objectOptions' => array('hostid' => $this->data['hostid']),
-			'data' => $appToReplace
-		));
+		'name' => 'applications[]',
+		'objectName' => 'applications',
+		'objectOptions' => array('hostid' => $this->data['hostid']),
+		'data' => $appToReplace
+	));
 
 	$itemFormList->addRow(
-		array(
-			_('Replace applications'),
-			SPACE,
-			new CVisibilityBox('visible[applications]', isset($this->data['visible']['applications']), 'applications_', _('Original'))
-		),
+		array(_('Replace applications'), SPACE, new CVisibilityBox('visible[applications]',
+			isset($this->data['visible']['applications']), 'applications_', _('Original')
+		)),
 		$replaceApp
 	);
 
 	// add new or existing applications
 	$appToAdd = null;
-	if (isset($_REQUEST['new_applications'])) {
-		foreach ($_REQUEST['new_applications'] as $newApplication) {
+	if (hasRequest('new_applications')) {
+		foreach (getRequest('new_applications') as $newApplication) {
 			if (is_array($newApplication) && isset($newApplication['new'])) {
 				$appToAdd[] = array(
 					'id' => $newApplication['new'],
-					'name' => $newApplication['new'] . ' (new)',
+					'name' => $newApplication['new'].' ('._x('new', 'new element in multiselect').')',
 					'isNew' => true
 				);
 			}
@@ -525,19 +523,17 @@ if ($this->data['singleHost']) {
 	}
 
 	$newApp = new CMultiSelect(array(
-			'name' => 'new_applications[]',
-			'objectName' => 'applications',
-			'objectOptions' => array('hostid' => $this->data['hostid']),
-			'data' => $appToAdd,
-			'addNew' => true
-		));
+		'name' => 'new_applications[]',
+		'objectName' => 'applications',
+		'objectOptions' => array('hostid' => $this->data['hostid']),
+		'data' => $appToAdd,
+		'addNew' => true
+	));
 
 	$itemFormList->addRow(
-		array(
-			_('Add new or existing applications'),
-			SPACE,
-			new CVisibilityBox('visible[new_applications]', isset($this->data['visible']['new_applications']), 'new_applications_', _('Original'))
-		),
+		array(_('Add new or existing applications'), SPACE, new CVisibilityBox('visible[new_applications]',
+			isset($this->data['visible']['new_applications']), 'new_applications_', _('Original')
+		)),
 		$newApp
 	);
 }
